fix : File*Repository 생성자 주입 문제 해결
refactor : *Controller를 통해 웹 API 구현